# cmake-guides

./: .gitignore  CMakeLists.txt  README.md
src/additional-flags/: CMakeLists.txt  SetTargetCompileType.cmake
src/additional-libraries/: CMakeLists.txt  main.cpp
src/additional-packages/: CMakeLists.txt  main.cpp
src/custom-functions/: CMakeLists.txt  CreateMyExecutable.cmake
src/custom-functions/my_src/: main.cpp
src/custom-libraries/: CMakeLists.txt  rpch.cpp
src/simple-exec/: CMakeLists.txt  main.cpp
